# veneer

./: .gitignore  mise.toml
cssinjs/: Cargo.toml  MIGRATION.md  PARITY_ANT_CSSINJS.md  TODO.md
cssinjs/dioxus-style-macro/: Cargo.toml
cssinjs/dioxus-style-macro/src/: expand.rs  lib.rs
cssinjs/dioxus-style-macro/src/compile/: mod.rs
cssinjs/dioxus-style-macro/src/scope/: engine.rs  mod.rs  parser.rs
cssinjs/dioxus-style-macro/tests/: scoped_hook_api.rs  strict_mode.rs  style_parser.rs
cssinjs/scripts/: release_web_bundle.sh
cssinjs/src/: ant_api.rs  backend.rs  bundle.rs  hooks.rs  lib.rs  main.rs  plugin.rs  provider.rs  runtime.rs  scoped_style.rs  statistics.rs
cssinjs/src/compiler/: acss.rs  hash.rs  mod.rs  scss.rs
cssinjs/src/engine/: css_bundle.rs  mod.rs  precompile_records.rs  runtime_injector.rs  style_provider.rs
cssinjs/src/engine/cssinjs/: config.rs  hash.rs  mod.rs  object.rs  registry.rs  transform.rs  util.rs  var.rs  wasm.rs
cssinjs/src/platform/: liveview.rs  mod.rs  native.rs  ssr.rs  web.rs
cssinjs/tests/: ant_api_parity.rs  ant_hash_layout_parity.rs  ant_parity_matrix.rs  ant_surface_manifest_lock.rs  bundle_runtime.rs  compiler_contract.rs  cssinjs_utils_parity.rs  dev_style_runtime.rs  dev_style_stress.rs  dev_token_runtime.rs  feature_wiring.rs  full_engine_parity.rs  liveview_head_style.rs  perf_revision.rs  playwright_rs_parity.rs  register_order.rs  revision_listener.rs  scoped_style_api.rs  unit_helper.rs
dx-html/: Cargo.toml  README.md
dx-html/src/: escape.rs  lib.rs  sanitize.rs  script.rs
dx-html/tests/: basic.rs
lightningcss/: Cargo.toml
lightningcss/examples/: custom_at_rule.rs  schema.rs  serialize.rs
lightningcss/lightningcss-macros/: Cargo.toml
lightningcss/lightningcss-macros/src/: lib.rs  parse.rs  to_css.rs  visit.rs
lightningcss/parcel_selectors/: Cargo.toml  attr.rs  bloom.rs  builder.rs  lib.rs  matching.rs  parser.rs  serialization.rs
lightningcss/src/: bundler.rs  compat.rs  context.rs  css_modules.rs  declaration.rs  dependencies.rs  error.rs  lib.rs  logical.rs  macros.rs  main.rs  media_query.rs  parser.rs  prefixes.rs  printer.rs  selector.rs  serialization.rs  stylesheet.rs  targets.rs  traits.rs  vendor_prefix.rs  visitor.rs
lightningcss/src/properties/: align.rs  animation.rs  background.rs  border.rs  border_image.rs  border_radius.rs  box_shadow.rs  contain.rs  css_modules.rs  custom.rs  display.rs  effects.rs  flex.rs  font.rs  grid.rs  list.rs  margin_padding.rs  masking.rs  mod.rs  outline.rs  overflow.rs  position.rs  prefix_handler.rs  size.rs  svg.rs  text.rs  transform.rs  transition.rs  ui.rs
lightningcss/src/rules/: container.rs  counter_style.rs  custom_media.rs  document.rs  font_face.rs  font_feature_values.rs  font_palette_values.rs  import.rs  keyframes.rs  layer.rs  media.rs  mod.rs  namespace.rs  nesting.rs  page.rs  property.rs  scope.rs  starting_style.rs  style.rs  supports.rs  unknown.rs  view_transition.rs  viewport.rs
lightningcss/src/values/: alpha.rs  angle.rs  calc.rs  color.rs  easing.rs  gradient.rs  ident.rs  image.rs  length.rs  number.rs  percentage.rs  position.rs  ratio.rs  rect.rs  resolution.rs  shape.rs  size.rs  string.rs  syntax.rs  time.rs  url.rs
