[package]
name = "dx-html"
version = "0.2.0"
edition = "2024"
description = "Framework-grade HTML escaping, sanitizing, and script embedding helpers"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
html-escape = "0.2"
ammonia = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
