[package]
name = "lightningcss-derive"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
description = "Derive macros for lightningcss"

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "derive", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro"] }
